@startuml

title __PUBLISHER's Class Diagram__\n

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.publisher {
        class Empty {
            {static} + main()
            {static} + background()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.publisher {
        class Flux {
            {static} + main()
            {static} + background()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.publisher {
        class Mono {
            {static} + main()
            {static} + background()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.publisher {
        class Publisher {
            # Publisher()
            + map()
            + reduce()
            + filter()
            + next()
            + flatMap()
            + subscribe()
            + error()
            + complete()
        }
      }
    }
  }
  

  Empty -up-|> Publisher
  Flux -up-|> Publisher
  Mono -up-|> Publisher
  Publisher -up-|> Publisher


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
